Fixe color contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ a {
 
 /* Button */
 a.btn, button.btn {
-    background-color: #F3976C;
+    background-color: #2a2a2a;
     margin-top: 22px;
     text-transform: uppercase;
     width: 130px;
@@ -42,12 +42,12 @@ a.btn, button.btn {
     border-radius: 40px;
     text-shadow: 0 1px 0 rgba(0, 0, 1, .1);
     box-shadow: 0 1px 3px rgba(0, 0, 1, .25) inset O 1px 00 rgba(255, 255, 255, .15);
-    color: #FFF;
+    color: #e9e9e9;
     font-size: 1.2em;
 }
 a.btn:hover {
-    background-color: #c27956;
-    color: #FFF;
+    background-color: #000;
+    color: #fff;
 }
 a,
 button {
@@ -394,7 +394,7 @@ footer > div ul li a:hover {
 
 /* About - Page contact */
 #about-contact {
-    background-color: #F3976C;
+    background-color: #2a2a2a;
 }
 #about-contact > div {
     color: rgba(255, 255, 255, .7);
@@ -412,6 +412,10 @@ footer > div ul li a:hover {
 #contact-form .btn {
     width: 100%;
     border-radius: 10px;
+}
+#contact-form .btn:hover {
+    background-color: #000;
+    color: #fff;
 }
 #contact-form p {
     margin-top: 20px;
